--- a/public/index.html
+++ b/public/index.html
@@ -36,6 +36,6 @@
       referrerpolicy="no-referrer"
     ></script>
     <script src="./browser-app.js"></script>
-    <p>Developed: Kartikey Gupta</p>
+    <p>Developed by: Kartikey Gupta</p>
   </body>
 </html>
